[package]
name = "rommy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
whoami = "1.5"

[profile.release]
lto = true
codegen-units = 1
