[package]
name = "rommy"
description = "CLI tool to make coding with your chatbot easier"
authors = ["Japati Aisyah Bintang <stardove.bintang@gmail.com>", "Oliver Ruebenacker <curoli@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jati-bintang/rommy"
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
keywords = ["cli", "developer-tools", "snapshot", "chat", "rommy"]
categories = ["development-tools", "command-line-utilities"]


[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
whoami = "2.1"

[profile.release]
lto = true
codegen-units = 1
